# 12306-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  notification.rs
crates/client_12306/: Cargo.toml
crates/client_12306/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  notification.rs
crates/server/static/: dashboard.html  login.html  task_detail.html  task_new.html
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: development-design.md  prd.md  reference-analysis.md  run.md  target-plan.md
docs/stitch/stitch_12306_rs/_1/: code.html
docs/stitch/stitch_12306_rs/_3/: code.html
docs/stitch/stitch_12306_rs/_4/: code.html
docs/stitch/stitch_12306_rs/_6/: code.html
docs/stitch/stitch_12306_rs/_7/: code.html
