[workspace]
members = [
    "crates/client_12306",
    "crates/cli",
    "crates/core",
    "crates/scheduler",
    "crates/server",
    "crates/storage",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Nextsummer/12306-rs"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
png = "0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sm4 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "process"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
