[package]
name = "rs12306-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "12306-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
png.workspace = true
reqwest.workspace = true
rs12306-client-12306 = { path = "../client_12306" }
rs12306-core = { path = "../core" }
rs12306-server = { path = "../server" }
rs12306-storage = { path = "../storage" }
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
