[package]
name = "rs12306-client-12306"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
rs12306-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sm4.workspace = true
thiserror.workspace = true
tokio.workspace = true
