[package]
name = "rs12306-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
rs12306-client-12306 = { path = "../client_12306" }
rs12306-core = { path = "../core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

