[package]
name = "rs12306-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
rs12306-client-12306 = { path = "../client_12306" }
rs12306-core = { path = "../core" }
rs12306-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
